--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-2 [香港回归周年多人遭捕  一员警遇袭](/articles/dw/1041622.md)
+
 7-1 [欧盟疫苗证书意义何在？你需要知道的有这些！](/articles/dw/1041623.md)
 
 7-1 [新冠期间 飞行员们在干嘛？](/articles/dw/1041624.md)
@@ -598,6 +600,4 @@
 6-16 [法国电力：台山核电曾主动排气，没有核泄漏](/articles/dw/1041920.md)
 
 6-16 [美欧就空客波音补贴达成协议 放弃制裁关税](/articles/dw/1041921.md)
-
-6-16 [中方批北约渲染“中国威胁论” 美欧修复盟友关系](/articles/dw/1041922.md)
 
