--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,54 @@
 路透
 ------
 
+7-2 [6月新兴市场投资组合净外资流入为5月近三倍 逾四成进中国--IIF](/articles/reuters/1036211.md)
+
+7-2 [综述：美国就业市场复苏动能增强 但用工短缺问题成绊脚石](/articles/reuters/1036212.md)
+
+7-2 [美国CBO预计2021年度财赤小降至约3万亿美元 经济成长和税收反弹料强于预期](/articles/reuters/1036213.md)
+
+7-2 [美国FTC舍弃旧指引 降低针对科技巨头的反垄断调查的门槛](/articles/reuters/1036214.md)
+
+7-2 [世卫组织称如果放松警惕 欧洲杯将引燃新一波疫情](/articles/reuters/1036215.md)
+
+7-2 [焦点：OPEC+推迟部长级会议至周五 因阿联酋反对新产量协议--消息](/articles/reuters/1036216.md)
+
+7-2 [中国滴滴将于7月12日被纳入标普道琼斯的全球股票指数](/articles/reuters/1036217.md)
+
+7-2 [特朗普集团及其首席财务官对税务欺诈指控表示不认罪](/articles/reuters/1036218.md)
+
+7-2 [经合组织的全球最低税率协议对中国也不例外--美国官员](/articles/reuters/1036219.md)
+
+7-2 [IMF将美国2021年经济增长预估大幅上调至7% 为数十年来最快增速](/articles/reuters/1036220.md)
+
+7-2 [印度选择全球企业加入IT生产奖励计划 鸿海及纬创旗下公司入列](/articles/reuters/1036221.md)
+
+7-2 [美国务院发言人称中国核力量迅速壮大“令人担忧”](/articles/reuters/1036222.md)
+
+7-2 [IMF对全球税收协议表示欢迎 敦促未加入的国家加入进来](/articles/reuters/1036223.md)
+
+7-2 [马来西亚指定爱立信为合作伙伴 开发5G网络和生态系统](/articles/reuters/1036224.md)
+
+7-2 [投资者押注今年下半年美债收益率维持低迷或继续下行](/articles/reuters/1036225.md)
+
+7-2 [富时罗素将小鹏汽车纳入全球股票等三个指数 7月8日起生效](/articles/reuters/1036226.md)
+
+7-2 [独家：伊朗遭袭后一直限制联合国核查人员进入主要铀浓缩工厂--外交人士](/articles/reuters/1036227.md)
+
+7-2 [美国第二季汽车销量激增 SUV需求强劲、厂商转向电动车](/articles/reuters/1036228.md)
+
+7-2 [焦点：130个国家支持跨国公司征税地和15%全球最低企业税率新规](/articles/reuters/1036229.md)
+
+7-2 [路透测算的人民币中间价料升至6.4676元附近 美指创三个月新高](/articles/reuters/1036230.md)
+
+7-2 [中金公司预计上半年净利同比增长45-65% 上年同期净利30.52亿元](/articles/reuters/1036231.md)
+
+7-2 [中石油预计上半年扭亏为盈、净利增750-900亿元 大部分油气产品量效齐增](/articles/reuters/1036232.md)
+
+7-2 [美国非农就业数据公布前美元升至三个月高位 短线料续涨](/articles/reuters/1036233.md)
+
+7-2 [美股标普500指数连续第六日刷新收盘纪录 创2月初以来最长连涨](/articles/reuters/1036234.md)
+
 7-2 [油价大涨约2% 因OPEC+增产速度或低于预期及需求增加前景](/articles/reuters/1036235.md)
 
 7-2 [金价在6月大跌后7月开局小涨 静待美国非农就业报告](/articles/reuters/1036236.md)
@@ -552,52 +600,4 @@
 6-24 [中国需保持年均5%左右经济增长才能跨过中等收入陷阱--前副财长](/articles/reuters/1036509.md)
 
 6-24 [中国央行研究局：清洁能源产业绿色贷款占比不足27% 金融机构应重点支持](/articles/reuters/1036510.md)
-
-6-24 [中国国防部：坚决反对美国 “以台制华” 坚决反对台湾“挟美自重”](/articles/reuters/1036511.md)
-
-6-24 [中国在WTO起诉澳大利亚反倾销和反补贴措施 望相关贸易尽早回正轨--商务部](/articles/reuters/1036512.md)
-
-6-24 [人民币收升结束五连跌 FED政策讨论及美数据仍是关键指引](/articles/reuters/1036513.md)
-
-6-24 [德国总理默克尔称欧盟应寻求与俄罗斯总统普京直接接触](/articles/reuters/1036514.md)
-
-6-24 [独家：挡下中国后 太平洋岛国瑙鲁寻求澳洲协助建造海底电缆](/articles/reuters/1036515.md)
-
-6-24 [分析：美联储关于通胀的信号互相矛盾 投资人莫衷一是](/articles/reuters/1036516.md)
-
-6-24 [中国股市沪综指收平 消费、新能源类股上涨抵消了医药类股的跌幅](/articles/reuters/1036517.md)
-
-6-24 [美国限制对五家中国实体出口 中国外交部称对此强烈谴责](/articles/reuters/1036518.md)
-
-6-24 [人民币兑美元具进一步升值空间 债券回报率料达5%--瑞信](/articles/reuters/1036519.md)
-
-6-24 [第一轮俄美军备控制会谈可能在7月举行--俄新社](/articles/reuters/1036520.md)
-
-6-24 [焦点：半年末百亿逆回购稳势终破局 维稳流动性中国央行说到做到](/articles/reuters/1036521.md)
-
-6-24 [德国5月对美国出口同比劲增近41% 对中国出口增长17.7%](/articles/reuters/1036522.md)
-
-6-24 [中国计划在2033年进行首次载人火星探测](/articles/reuters/1036523.md)
-
-6-24 [亚洲银行业的“代币化证券”试验陷入孤岛 亟需监管支持--行业协会](/articles/reuters/1036524.md)
-
-6-24 [马斯克称一旦现金流更可预测 星链就会上市](/articles/reuters/1036525.md)
-
-6-24 [支付宝NFT付款码皮肤被抢光 蚂蚁集团强调NFT与加密货币是两码事](/articles/reuters/1036526.md)
-
-6-24 [美国凶杀案激增 拜登将严查非法出售枪支的 “死亡商人“](/articles/reuters/1036527.md)
-
-6-24 [中国民生银行称对恒大集团的授信风险仍处可控范围内 无逾期情况发生](/articles/reuters/1036528.md)
-
-6-24 [中国能源消费结构中天然气占比到2035年料“大幅”增加--中国石油](/articles/reuters/1036529.md)
-
-6-24 [朝鲜外务相李善权称 朝鲜没在考虑与美国进行任何接触--朝中社](/articles/reuters/1036530.md)
-
-6-24 [亚股原地踏步 市场关注美国通胀信号](/articles/reuters/1036531.md)
-
-6-24 [中国银保监会官员：通胀很可能不是短期的 预计下个月中国PPI可能会到10%](/articles/reuters/1036532.md)
-
-6-24 [长赐号堵塞苏伊士运河纠纷达成原则性协议 赔偿金额暂未知](/articles/reuters/1036533.md)
-
-6-24 [维多公司扩展中国船用燃料业务 在上海洋山港提供海上加油服务](/articles/reuters/1036534.md)
 
