--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+7-2 [每周时事分析：疫情危机下，朝鲜将清理整顿干部队伍](/articles/ft/1045398.md)
+
+7-2 [怎么理解政策语境下的“实际贷款利率”？](/articles/ft/1045399.md)
+
+7-2 [LUMA工作坊公园：法国古城废墟里的现代艺术社区](/articles/ft/1045400.md)
+
 7-1 [滴滴美国上市首日股价小幅上涨](/articles/ft/1045401.md)
 
 7-1 [为什么中国改革没有结束时间表？](/articles/ft/1045402.md)
@@ -594,10 +600,4 @@
 4-27 [美国计划与其他国家分享6000万剂阿斯利康疫苗](/articles/ft/1045696.md)
 
 4-27 [《无依之地》：停车位将是美国最后一片自由之地](/articles/ft/1045697.md)
-
-4-27 [互联网巨头的“边界”](/articles/ft/1045698.md)
-
-4-27 [中国人，亦或世界人](/articles/ft/1045699.md)
-
-4-27 [自动驾驶是车险行业的噩梦](/articles/ft/1045700.md)
 
