--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-2 [如何应对中国对美企的恶意影响？脱钩或是唯一选项](/articles/voa/1039758.md)
+
+7-2 [美国称中国扩充核武库令人关注](/articles/voa/1039759.md)
+
 7-2 [“百年的暴行”——美政界、媒体评中共建党周年](/articles/voa/1039760.md)
 
 7-2 [从日本回国的维吾尔科研员死亡，中国被指负有责任](/articles/voa/1039761.md)
@@ -596,8 +600,4 @@
 6-18 [涉中国“千人计划”的美宇航局资深科学家被判监禁](/articles/voa/1040056.md)
 
 6-18 [美国最高法院再次维持《平价医保法案》](/articles/voa/1040057.md)
-
-6-18 [核武库将翻一番 中国急速核扩军意图何在？](/articles/voa/1040058.md)
-
-6-18 [参联会主席：中国不太可能近期武装夺取台湾](/articles/voa/1040059.md)
 
