--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-2 [端传媒 | “对党忠诚”：一场以党建为名的新基层整风运动（节选）](/articles/cdt/380816.md)
+
+7-2 [故事硬核 | 何伟的最后一课](/articles/cdt/380819.md)
+
 7-1 [自由时报｜怎样才不辱华？SONY计划7月7日发表新产品也被出征](/articles/cdt/380836.md)
 
 7-1 [【404档案馆】CDT播客第9期：知名反共技术博主编程随想“失踪”](/articles/cdt/380838.md)
@@ -596,8 +600,4 @@
 5-25 [中产生活观察 | 白银百公里越野悲剧和中国新中产命运](/articles/cdt/382239.md)
 
 5-25 [德国之音 | 瑞典环保少女与中国官媒的口水战](/articles/cdt/382243.md)
-
-5-25 [明白知识 | 人类社会真正免于饥荒的原因](/articles/cdt/382244.md)
-
-5-25 [律侠普法 | 李子暘攻击袁隆平安然无恙，山东网民质疑袁隆平随时被抓](/articles/cdt/382245.md)
 
