--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+7-2 [滴滴可以从TikTok那里学到什么？](/articles/ft/1045396.md)
+
+7-2 [中国人如何理解英国乡村之美？](/articles/ft/1045397.md)
+
 7-2 [每周时事分析：疫情危机下，朝鲜将清理整顿干部队伍](/articles/ft/1045398.md)
 
 7-2 [怎么理解政策语境下的“实际贷款利率”？](/articles/ft/1045399.md)
@@ -596,8 +600,4 @@
 4-27 [本周欧盟将对苹果反竞争行为提起诉讼](/articles/ft/1045694.md)
 
 4-27 [汇丰今年第一季度净利润增长79%](/articles/ft/1045695.md)
-
-4-27 [美国计划与其他国家分享6000万剂阿斯利康疫苗](/articles/ft/1045696.md)
-
-4-27 [《无依之地》：停车位将是美国最后一片自由之地](/articles/ft/1045697.md)
 
