--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-2 [安特托昆博缺阵 公鹿照赢老鹰东区决赛听牌 – 法国国际广播电台 - RFI](/articles/rfi/1026997.md)
+
 7-2 [中共党庆 习近平念念不忘外来势力 - 要闻分析](/articles/rfi/1026998.md)
 
 7-2 [七一中共百年党庆细节](/articles/rfi/1026999.md)
@@ -598,6 +600,4 @@
 6-27 [阻Delta病毒 雪梨启动2周封城 – 法国国际广播电台 - RFI](/articles/rfi/1027295.md)
 
 6-27 [“全球英国”战略下伦敦的向印太倾斜政策解析 - 印太纵览](/articles/rfi/1027296.md)
-
-6-27 [美新墨西哥州热气球撞电线坠毁  酿5死 – 法国国际广播电台 - RFI](/articles/rfi/1027297.md)
 
