--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-2 [中共100岁了，它还会活得更久](/articles/nyt/1046651.md)
+
 7-2 [习近平“七一”讲话传达了什么信号？](/articles/nyt/1046652.md)
 
 7-2 [简报：习近平“七一”讲话传递哪些信号；特朗普集团涉嫌税务犯罪被起诉](/articles/nyt/1046653.md)
@@ -598,6 +600,4 @@
 4-21 [Twitter封禁特朗普的100天](/articles/nyt/1046949.md)
 
 4-21 [急需新冠疫苗，巴拉圭会放弃台湾转投中国吗？](/articles/nyt/1046950.md)
-
-4-21 [搁置分歧，美中同意合作应对气候变化](/articles/nyt/1046951.md)
 
