--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-2 [中印边境情势又升温 会不会再擦枪走火？](/articles/dw/1041619.md)
+
+7-2 [抗中升级? 日菲首次联合空军演习](/articles/dw/1041620.md)
+
 7-2 [甘肃沙漠现导弹设施 美忧北京核力量大增](/articles/dw/1041621.md)
 
 7-2 [香港回归周年多人遭捕  一员警遇袭](/articles/dw/1041622.md)
@@ -596,8 +600,4 @@
 6-16 [不顾反对声浪 匈牙利议会核准捐国有土地给复旦](/articles/dw/1041917.md)
 
 6-16 [欧美峰会再压中国 北京:不会被吓倒](/articles/dw/1041918.md)
-
-6-16 [美准亚太助卿：华府应全面拓展与台关系](/articles/dw/1041919.md)
-
-6-16 [法国电力：台山核电曾主动排气，没有核泄漏](/articles/dw/1041920.md)
 
