--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 7-2 [故事硬核 | 何伟的最后一课](/articles/cdt/380819.md)
 
+7-2 [【CDT月度视频】2021年6月：爱国就该多生小孩，一胎二胎到七胎](/articles/cdt/380824.md)
+
 7-1 [自由时报｜怎样才不辱华？SONY计划7月7日发表新产品也被出征](/articles/cdt/380836.md)
 
 7-1 [【404档案馆】CDT播客第9期：知名反共技术博主编程随想“失踪”](/articles/cdt/380838.md)
@@ -598,6 +600,4 @@
 5-25 [品葱｜Tseyu：讨薪者再次成为“恐怖分子”，舆论环境却大不相同](/articles/cdt/382235.md)
 
 5-25 [中产生活观察 | 白银百公里越野悲剧和中国新中产命运](/articles/cdt/382239.md)
-
-5-25 [德国之音 | 瑞典环保少女与中国官媒的口水战](/articles/cdt/382243.md)
 
