--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+7-2 [习近平强调抵御外国欺负中国 学者却指安内重于攘外](/articles/rfi/1026979.md)
+
+7-2 [民意调查指拜登国内支持率下滑 经济评议跃首选](/articles/rfi/1026980.md)
+
+7-2 [中国科学家研发成功公老鼠怀孕诞小老鼠 遭批或下架论文](/articles/rfi/1026981.md)
+
+7-2 [优衣库重申：没有采用与新疆棉花制造产业强劳相关的产品](/articles/rfi/1026982.md)
+
+7-2 [台湾今报57例本土新冠病例](/articles/rfi/1026983.md)
+
+7-2 [130个国家支持全球向跨国公司最低征税15% 中国最终同意了](/articles/rfi/1026984.md)
+
+7-2 [澳洲防疫情扩散 7月中旬起入境旅客数减半 – 法国国际广播电台 - RFI](/articles/rfi/1026985.md)
+
 7-2 [中国党庆引美国对中国核力量迅速壮大关注 指“令人担忧”](/articles/rfi/1026986.md)
 
 7-2 [拜登前往迈阿密楼坍塌现场 呼吁不分共和党还是民主党都团结救灾](/articles/rfi/1026987.md)
@@ -586,18 +600,4 @@
 6-27 [苹果日报：传港府允复刊条件是交出员工个人资料](/articles/rfi/1027277.md)
 
 6-27 [以色列外长访罗马 将会美国务卿布林肯 – 法国国际广播电台 - RFI](/articles/rfi/1027278.md)
-
-6-27 [龙的传人？中国发现新古代人种 称为人类起源研究提供新观点](/articles/rfi/1027279.md)
-
-6-27 [巴黎举行同性恋者自豪游行 从郊区进发](/articles/rfi/1027280.md)
-
-6-27 [马拉度纳因医疗疏失致死？私人医师将受讯问 – 法国国际广播电台 - RFI](/articles/rfi/1027281.md)
-
-6-27 [台湾疫情仍报88本土例](/articles/rfi/1027282.md)
-
-6-27 [特斯拉应中国要求召回28万品牌车完善安全性](/articles/rfi/1027283.md)
-
-6-27 [孙杨巴黎奥运会不确定？传注册5公司或经商](/articles/rfi/1027284.md)
-
-6-27 [美墨加贸易协定将满周年 3国龃龉浮现 – 法国国际广播电台 - RFI](/articles/rfi/1027285.md)
 
