--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+7-2 [中共百年党庆 马斯克发文赞叹引热议](/articles/rfi/1026972.md)
+
+7-2 [欧洲杯八强今晚开打 谨防Delta病毒近距离觊觎！](/articles/rfi/1026973.md)
+
+7-2 [加州州长纽松罢免投票 定于9/14举行 – 法国国际广播电台 - RFI](/articles/rfi/1026974.md)
+
+7-2 [世卫认证中国疫苗 遭指挑战西方国家标准](/articles/rfi/1026975.md)
+
+7-2 [美国本月太空游成行 女英雄飞行员冯克与贝佐斯捷足先登](/articles/rfi/1026976.md)
+
+7-2 [共产中国企图夺取世界霸权 - 法国报纸摘要](/articles/rfi/1026977.md)
+
+7-2 [气候恶劣和冲突迫使人口大量迁徙 - 环境与发展](/articles/rfi/1026978.md)
+
 7-2 [习近平强调抵御外国欺负中国 学者却指安内重于攘外](/articles/rfi/1026979.md)
 
 7-2 [民意调查指拜登国内支持率下滑 经济评议跃首选](/articles/rfi/1026980.md)
@@ -586,18 +600,4 @@
 6-27 [世界新冠确诊逼向两亿 美媒说新冠病毒溯源研究三项新发现：条条不利中国当局掩盖真相的努力](/articles/rfi/1027270.md)
 
 6-27 [美国豪宅讯息或称刘长乐以760万美元抛售洛杉矶豪宅](/articles/rfi/1027271.md)
-
-6-27 [美国东奥田径选拔 110米跨栏世界冠军哈洛威出线 – 法国国际广播电台 - RFI](/articles/rfi/1027272.md)
-
-6-27 [德尔塔变种病毒导致新一轮闭关封城 - 法国报纸摘要](/articles/rfi/1027273.md)
-
-6-27 [东盟媒体工作者面临危机和挑战 - 曼谷专栏](/articles/rfi/1027274.md)
-
-6-27 [牙买加跳远之王盖尔 取得东京奥运资格 – 法国国际广播电台 - RFI](/articles/rfi/1027275.md)
-
-6-27 [特朗普高调办造势活动 法新社称是展开复仇之旅](/articles/rfi/1027276.md)
-
-6-27 [苹果日报：传港府允复刊条件是交出员工个人资料](/articles/rfi/1027277.md)
-
-6-27 [以色列外长访罗马 将会美国务卿布林肯 – 法国国际广播电台 - RFI](/articles/rfi/1027278.md)
 
