--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-2 [荷兰反省蓄奴历史 阿姆斯特丹市长道歉](/articles/dw/1041617.md)
+
 7-2 [或涉新疆强迫劳动 法国调查四服饰品牌](/articles/dw/1041618.md)
 
 7-2 [中印边境情势又升温 会不会再擦枪走火？](/articles/dw/1041619.md)
@@ -598,6 +600,4 @@
 6-16 [马云保持低调  蔡崇信：他很好丶专注绘画](/articles/dw/1041915.md)
 
 6-16 [最大规模！28架中国军机进入台湾空域](/articles/dw/1041916.md)
-
-6-16 [不顾反对声浪 匈牙利议会核准捐国有土地给复旦](/articles/dw/1041917.md)
 
