--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-2 [红色歌剧、爱国说唱：艺术“献礼”中共百年](/articles/nyt/1046649.md)
+
 7-2 [追求体育梦想还是“要女性化”：日本女运动员的困境](/articles/nyt/1046650.md)
 
 7-2 [中共100岁了，它还会活得更久](/articles/nyt/1046651.md)
@@ -598,6 +600,4 @@
 4-21 [从日本到澳洲，为何亚太国家疫苗接种缓慢？](/articles/nyt/1046947.md)
 
 4-21 [菲利普亲王葬礼：英国王室一个时代的终结](/articles/nyt/1046948.md)
-
-4-21 [Twitter封禁特朗普的100天](/articles/nyt/1046949.md)
 
