--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-2 [德国学者：“我们的问题是 中国真的很现代”](/articles/dw/1041614.md)
+
+7-2 [越来越高呼声要求绕开WHO 进行新冠溯源](/articles/dw/1041615.md)
+
+7-2 [意大利禁止英国球迷入境观看欧洲杯1/4决赛](/articles/dw/1041616.md)
+
 7-2 [荷兰反省蓄奴历史 阿姆斯特丹市长道歉](/articles/dw/1041617.md)
 
 7-2 [或涉新疆强迫劳动 法国调查四服饰品牌](/articles/dw/1041618.md)
@@ -594,10 +600,4 @@
 6-16 [危险的降落！ 环保人士空降欧锦赛场导致他人受伤](/articles/dw/1041912.md)
 
 6-16 [以巴再爆衝突](/articles/dw/1041913.md)
-
-6-16 [凯旋门将着上盛装](/articles/dw/1041914.md)
-
-6-16 [马云保持低调  蔡崇信：他很好丶专注绘画](/articles/dw/1041915.md)
-
-6-16 [最大规模！28架中国军机进入台湾空域](/articles/dw/1041916.md)
 
