--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-2 [商务部长称习近平讲的是强硬空话，将推动美国公司在华市场准入](/articles/voa/1039756.md)
+
 7-2 [中国的“疫苗外交”没有赢得东南亚国家的战略信任](/articles/voa/1039757.md)
 
 7-2 [如何应对中国对美企的恶意影响？脱钩或是唯一选项](/articles/voa/1039758.md)
@@ -598,6 +600,4 @@
 6-18 [美国务院“强烈谴责”抓捕《苹果日报》及壹传媒高管](/articles/voa/1040054.md)
 
 6-18 [港警逮捕民主派媒体高管 美批出于政治动机 强烈谴责](/articles/voa/1040055.md)
-
-6-18 [涉中国“千人计划”的美宇航局资深科学家被判监禁](/articles/voa/1040056.md)
 
