--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-2 [中共百年庆如朝鲜造神 香港遭铁腕已成"中资金融中心"](/articles/rfa/1045165.md)
+
 7-2 [俄、朝、巴政要给中共发贺电      日本政要称中方主动提出请求](/articles/rfa/1045166.md)
 
 7-2 [国际知名中国学者：中共面临统治危机 美国应做好应对预案](/articles/rfa/1045167.md)
@@ -598,6 +600,4 @@
 5-29 [美议员提案制裁北京冬奥赞助商](/articles/rfa/1045463.md)
 
 5-29 [批评中国等于反亚裔？加拿大总理帮中国做大外宣](/articles/rfa/1045464.md)
-
-5-29 [欧盟日本领袖峰会推动印太战略  日外相访中东欧寻求支持](/articles/rfa/1045465.md)
 
