--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-2 [印度新冠死者超过40万](/articles/dw/1041610.md)
+
+7-2 [从连战丶洪秀柱贺中共百年看国民党困境](/articles/dw/1041611.md)
+
+7-2 [北约部队全部撤出在阿富汗最大基地](/articles/dw/1041612.md)
+
+7-2 [戴安娜王妃雕像揭幕  威廉哈里再聚首](/articles/dw/1041613.md)
+
 7-2 [德国学者：“我们的问题是 中国真的很现代”](/articles/dw/1041614.md)
 
 7-2 [越来越高呼声要求绕开WHO 进行新冠溯源](/articles/dw/1041615.md)
@@ -592,12 +600,4 @@
 6-16 [拜登会见普京 和中国有什么关系？](/articles/dw/1041908.md)
 
 6-16 [G7提台海和平後  中國派28架军机对台湾「秀肌肉」剑指何方？](/articles/dw/1041909.md)
-
-6-16 [金正恩警告：朝鲜粮食短缺](/articles/dw/1041910.md)
-
-6-16 [时隔5年 神舟即将再次上天](/articles/dw/1041911.md)
-
-6-16 [危险的降落！ 环保人士空降欧锦赛场导致他人受伤](/articles/dw/1041912.md)
-
-6-16 [以巴再爆衝突](/articles/dw/1041913.md)
 
