--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-2 [关岛放松入境管制 台湾人争相前往接种疫苗](/articles/dw/1041608.md)
+
+7-2 [德国11种夏季最流行食品](/articles/dw/1041609.md)
+
 7-2 [印度新冠死者超过40万](/articles/dw/1041610.md)
 
 7-2 [从连战丶洪秀柱贺中共百年看国民党困境](/articles/dw/1041611.md)
@@ -596,8 +600,4 @@
 6-16 [外交部驻港特派员：国安法及改变选举令香港由乱转治](/articles/dw/1041906.md)
 
 6-16 [“看到它们奔跑 对我来说就意味着一切”](/articles/dw/1041907.md)
-
-6-16 [拜登会见普京 和中国有什么关系？](/articles/dw/1041908.md)
-
-6-16 [G7提台海和平後  中國派28架军机对台湾「秀肌肉」剑指何方？](/articles/dw/1041909.md)
 
