--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-2 [德语媒体：如何看待习近平的“钢铁长城”和“头破血流”](/articles/dw/1041606.md)
+
+7-2 [世卫: 进入紧急使用名单的疫苗都应获承认](/articles/dw/1041607.md)
+
 7-2 [关岛放松入境管制 台湾人争相前往接种疫苗](/articles/dw/1041608.md)
 
 7-2 [德国11种夏季最流行食品](/articles/dw/1041609.md)
@@ -596,8 +600,4 @@
 6-16 [中法齐声“无核泄漏”，何缘找美国求救？](/articles/dw/1041904.md)
 
 6-16 [步香港后尘 澳门暂停运作驻台办事处](/articles/dw/1041905.md)
-
-6-16 [外交部驻港特派员：国安法及改变选举令香港由乱转治](/articles/dw/1041906.md)
-
-6-16 [“看到它们奔跑 对我来说就意味着一切”](/articles/dw/1041907.md)
 
