--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+7-2 [全球忙抗疫 人口贩运更猖獗 – 法国国际广播电台 - RFI](/articles/rfi/1026948.md)
+
+7-2 [美短跑女将验出大麻阳性 错失东京奥运100米竞赛 – 法国国际广播电台 - RFI](/articles/rfi/1026949.md)
+
+7-2 [美国6月新增85万就业人口 优于预期 – 法国国际广播电台 - RFI](/articles/rfi/1026950.md)
+
+7-2 [美国6月就业数据优 标普那指开新高 – 法国国际广播电台 - RFI](/articles/rfi/1026951.md)
+
+7-2 [美国与北约军队今全部撤出阿富汗巴格拉姆空军基地  民众苦涩](/articles/rfi/1026952.md)
+
+7-2 [习近平7.1建党百年称绝不接受“教师爷”般颐指气使的说教 微博2.5小时阅读50亿次](/articles/rfi/1026953.md)
+
+7-2 [世卫建议校园进行筛检 避免远端学习有害的影响 – 法国国际广播电台 - RFI](/articles/rfi/1026954.md)
+
+7-2 [纽约刚上市 滴滴出行遭中国网络安全审查](/articles/rfi/1026955.md)
+
+7-2 [加深民主同盟 有效反对独裁](/articles/rfi/1026956.md)
+
 7-2 [维他奶遭中国网友抵制 称刺警者不幸逝世](/articles/rfi/1026957.md)
 
 7-2 [美国向台湾提供疫苗是因为芯片还是中共？ - 台北一周](/articles/rfi/1026958.md)
@@ -582,22 +600,4 @@
 6-28 [AZ与牛津大学展开改良疫苗试验 – 法国国际广播电台 - RFI](/articles/rfi/1027246.md)
 
 6-28 [《苹果日报》停刊 英文版执行总编辑再被捕 - 要闻分析](/articles/rfi/1027247.md)
-
-6-28 [瓦莱丽·佩克雷斯赢得法兰西岛大区选举](/articles/rfi/1027248.md)
-
-6-28 [法大区和省议会第二轮选举弃权率仍高达65%](/articles/rfi/1027249.md)
-
-6-28 [法国首现两人Delta病毒死亡病例](/articles/rfi/1027250.md)
-
-6-28 [Delta变异病毒肆虐 莫斯科单日144例不治创新高](/articles/rfi/1027251.md)
-
-6-28 [允许观众入场观看奥运 日本在经济与防疫之间徘徊抉择](/articles/rfi/1027252.md)
-
-6-28 [成都天府机场启用    首飞北京](/articles/rfi/1027253.md)
-
-6-28 [中国发布“天问一号”火星探测任务着陆和巡视探测影像](/articles/rfi/1027254.md)
-
-6-28 [法国学者看地缘政治波折中的两岸三地电影 - 公民论坛](/articles/rfi/1027255.md)
-
-6-28 [Covid-19 : 马来西亚决定延长封国措施](/articles/rfi/1027256.md)
 
