--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+7-2 [港警七一街头遇袭受伤    政府归咎于有人仇恨国家社会](/articles/rfa/1045162.md)
+
+7-2 [女记者调侃七一庆典表演者“争相献祭” 微博被封号](/articles/rfa/1045163.md)
+
+7-2 [卫星图片曝光： 中国于甘肃建逾百洲际导弹发射井](/articles/rfa/1045164.md)
+
 7-2 [中共百年庆如朝鲜造神 香港遭铁腕已成"中资金融中心"](/articles/rfa/1045165.md)
 
 7-2 [俄、朝、巴政要给中共发贺电      日本政要称中方主动提出请求](/articles/rfa/1045166.md)
@@ -594,10 +600,4 @@
 5-29 [美制裁中国一远洋捕鱼企业  因强迫劳动](/articles/rfa/1045460.md)
 
 5-29 [九旬朝战老兵吁中国为数千失踪官兵正名](/articles/rfa/1045461.md)
-
-5-29 [年轻人为什么“躺平”？ 官媒为何炮轰？](/articles/rfa/1045462.md)
-
-5-29 [美议员提案制裁北京冬奥赞助商](/articles/rfa/1045463.md)
-
-5-29 [批评中国等于反亚裔？加拿大总理帮中国做大外宣](/articles/rfa/1045464.md)
 
