--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-3 [Berliner Bericht｜中共百年党庆，知名推友发起“守护中共长命百岁是76亿人的中指”活动](/articles/cdt/380797.md)
+
 7-2 [端传媒 | “对党忠诚”：一场以党建为名的新基层整风运动（节选）](/articles/cdt/380816.md)
 
 7-2 [故事硬核 | 何伟的最后一课](/articles/cdt/380819.md)
@@ -598,6 +600,4 @@
 5-25 [先生制造｜还原白银越野事故现场：一场时间错乱的灾难](/articles/cdt/382232.md)
 
 5-25 [品葱｜Tseyu：讨薪者再次成为“恐怖分子”，舆论环境却大不相同](/articles/cdt/382235.md)
-
-5-25 [中产生活观察 | 白银百公里越野悲剧和中国新中产命运](/articles/cdt/382239.md)
 
