--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-3 [旧金山洛杉矶中领馆外同日集会  抗击中共建党百年](/articles/rfa/1045160.md)
+
 7-2 [美国会吁UN调查中国人权指控  智库聚焦UN中国影响力扩张](/articles/rfa/1045161.md)
 
 7-2 [港警七一街头遇袭受伤    政府归咎于有人仇恨国家社会](/articles/rfa/1045162.md)
@@ -598,6 +600,4 @@
 5-31 [政治局拍板落实三孩政策、延迟退休年龄](/articles/rfa/1045458.md)
 
 5-31 [旧金山民运人士清洗民主女神像  为六四纪念活动做准备](/articles/rfa/1045459.md)
-
-5-29 [美制裁中国一远洋捕鱼企业  因强迫劳动](/articles/rfa/1045460.md)
 
