--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+7-3 [“公鼠怀孕”作者撤稿  中国科研人员的底线在哪儿？](/articles/rfa/1045157.md)
+
+7-3 [民主人士华盛顿示威 谴责中共带来灾难百年](/articles/rfa/1045158.md)
+
+7-3 [法国司法部门首次就维吾尔人权迫害展开调查  四服装集团涉新疆强迫劳动](/articles/rfa/1045159.md)
+
 7-3 [旧金山洛杉矶中领馆外同日集会  抗击中共建党百年](/articles/rfa/1045160.md)
 
 7-2 [美国会吁UN调查中国人权指控  智库聚焦UN中国影响力扩张](/articles/rfa/1045161.md)
@@ -594,10 +600,4 @@
 5-31 [疫苗外交争霸战 美国能后来居上？](/articles/rfa/1045455.md)
 
 5-31 [台湾疫苗政策遭挑战 蔡政府面临舆论压力锅 呼吁冷静团结](/articles/rfa/1045456.md)
-
-5-31 [六四异议人士将被旅游    天安门母亲求真相决心未变](/articles/rfa/1045457.md)
-
-5-31 [政治局拍板落实三孩政策、延迟退休年龄](/articles/rfa/1045458.md)
-
-5-31 [旧金山民运人士清洗民主女神像  为六四纪念活动做准备](/articles/rfa/1045459.md)
 
