--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [美国对缅甸军方及相关企业和个人实施新一轮制裁 中资公司被纳入实体清单](/articles/voa/1039745.md)
+
 7-3 [搜救人员从佛州大楼废墟中又找出两具遗体](/articles/voa/1039746.md)
 
 7-3 [台湾外长强调台湾未来只能由台湾人民决定](/articles/voa/1039747.md)
@@ -598,6 +600,4 @@
 6-18 [中国当局约谈美团王兴 警告他低调做人方保平安](/articles/voa/1040043.md)
 
 6-18 [被控勾结外国势力，香港苹果日报两高管遭起诉](/articles/voa/1040044.md)
-
-6-18 [周五《苹果日报》增印5倍 港人排队购报以示支持](/articles/voa/1040045.md)
 
