--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-3 [白宫庆祝国际社会就全球最低企业税率达成重大协议](/articles/voa/1039741.md)
+
+7-3 [美国6月份新增85万个就业岗位](/articles/voa/1039742.md)
+
 7-3 [《区域全面经济伙伴关系协定》吸引美国盟友向中国靠拢](/articles/voa/1039743.md)
 
 7-3 [拜登：美国未来几天不会完成从阿富汗撤军](/articles/voa/1039744.md)
@@ -596,8 +600,4 @@
 6-19 [壹传媒和苹果日报两高管遭起诉 香港新闻自由岌岌可危](/articles/voa/1040039.md)
 
 6-19 [蔡英文会唔二台企大佬 就采购BNT疫苗达共识](/articles/voa/1040040.md)
-
-6-18 [中共出重手防患“事故” 于内外交困中营造盛世景象](/articles/voa/1040041.md)
-
-6-18 [金正恩称要以对话和对抗两手策略应对美国](/articles/voa/1040042.md)
 
