--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [中国公司不怕美国监管，上市圈钱才是王道](/articles/voa/1039739.md)
+
 7-3 [美国假日周末旅行回到疫情前水平](/articles/voa/1039740.md)
 
 7-3 [白宫庆祝国际社会就全球最低企业税率达成重大协议](/articles/voa/1039741.md)
@@ -598,6 +600,4 @@
 6-19 [欧洲助黑山削减中国债务，谈判已进入最后阶段](/articles/voa/1040037.md)
 
 6-19 [流亡藏人领袖希望恢复与中国对话](/articles/voa/1040038.md)
-
-6-19 [壹传媒和苹果日报两高管遭起诉 香港新闻自由岌岌可危](/articles/voa/1040039.md)
 
