--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-3 [中国前瞻布局6G网络技术储备 指深化“一带一路”国际合作](/articles/rfi/1026926.md)
+
+7-3 [美国众议院因两党分歧延期讨论提升对华竞争力的全面议案](/articles/rfi/1026927.md)
+
+7-3 [台湾传获1000万剂疫苗 德国政府暗地使力助成洗糟糕名声](/articles/rfi/1026928.md)
+
 7-3 [大谷30轰笑傲MLB 跑回致胜分率天使逆转胜 – 法国国际广播电台 - RFI](/articles/rfi/1026929.md)
 
 7-3 [义大利2以1淘汰比利时 欧国杯4强出战西班牙 – 法国国际广播电台 - RFI](/articles/rfi/1026930.md)
@@ -594,10 +600,4 @@
 6-28 [Burberry执行长年底将去职 返回义大利 – 法国国际广播电台 - RFI](/articles/rfi/1027224.md)
 
 6-28 [日经指数微幅收低 日股获利卖压拖累 – 法国国际广播电台 - RFI](/articles/rfi/1027225.md)
-
-6-28 [欧洲逐渐解封 女性暴力致死案件数却攀升 – 法国国际广播电台 - RFI](/articles/rfi/1027226.md)
-
-6-28 [欧国杯英德宿敌对决 胜者几可预约4强 – 法国国际广播电台 - RFI](/articles/rfi/1027227.md)
-
-6-28 [毕加索与罗丹 独一无二的二人组展 - 法国文艺欣赏](/articles/rfi/1027228.md)
 
