--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-3 [外媒记者走访上海干部学院](/articles/dw/1041604.md)
+
 7-3 [金正恩：朝鲜面临 “重大危机”](/articles/dw/1041605.md)
 
 7-2 [德语媒体：如何看待习近平的“钢铁长城”和“头破血流”](/articles/dw/1041606.md)
@@ -598,6 +600,4 @@
 6-16 [拜登见普京 中国是关键议题](/articles/dw/1041902.md)
 
 6-16 [德语媒体：适得其反的《反制裁法》](/articles/dw/1041903.md)
-
-6-16 [中法齐声“无核泄漏”，何缘找美国求救？](/articles/dw/1041904.md)
 
