--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-3 [报导者 | 习时代下，党让中国人读些什么？](/articles/cdt/380762.md)
+
+7-3 [BBC | 大旗之下辗转腾挪的香港黄店店主、教师和普通市民](/articles/cdt/380764.md)
+
 7-3 [吐槽青年｜林生斌需要走出来，舆论也要走出来](/articles/cdt/380768.md)
 
 7-3 [【网络民议】“我觉得中共百年庆典搞得挺成功的，我挺难过”](/articles/cdt/380794.md)
@@ -596,8 +600,4 @@
 5-26 [褚朝新说事 | 救了6个人的牧羊人那么纯朴，为什么要公然撒谎？](/articles/cdt/382196.md)
 
 5-26 [八角楼的灯光 | 反恐的枪口为什么屡屡指向农民工？](/articles/cdt/382198.md)
-
-5-25 [网信唐山｜“网络涉军举报和辟谣平台”上线开通 净化涉军网络环境](/articles/cdt/382201.md)
-
-5-25 [真实故事计划｜62个白血病儿家长，在燕郊送外卖](/articles/cdt/382203.md)
 
