--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [日本讽刺漫画被小红粉们指责为“辱华”](/articles/voa/1039735.md)
+
 7-3 [周五一场勒索软件供应链攻击导致数百家美国公司网瘫](/articles/voa/1039736.md)
 
 7-3 [刚在美国上市，滴滴出行在中国受到安全审查](/articles/voa/1039737.md)
@@ -598,6 +600,4 @@
 6-19 [拜登欧洲行后，布林肯下周再访欧洲](/articles/voa/1040033.md)
 
 6-19 [加拿大开始考虑进军外国谍报领域](/articles/voa/1040034.md)
-
-6-19 [拜登宣布美国已接种三亿剂新冠疫苗](/articles/voa/1040035.md)
 
