--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-3 [三辉图书｜对权力的谄媚，是真心还是表演？](/articles/cdt/380755.md)
+
 7-3 [报导者 | 习时代下，党让中国人读些什么？](/articles/cdt/380762.md)
 
 7-3 [BBC | 大旗之下辗转腾挪的香港黄店店主、教师和普通市民](/articles/cdt/380764.md)
@@ -598,6 +600,4 @@
 5-26 [自由亚洲 | 袁隆平究竟是何时看到饿殍的？中国新华网的说法自相矛盾](/articles/cdt/382193.md)
 
 5-26 [褚朝新说事 | 救了6个人的牧羊人那么纯朴，为什么要公然撒谎？](/articles/cdt/382196.md)
-
-5-26 [八角楼的灯光 | 反恐的枪口为什么屡屡指向农民工？](/articles/cdt/382198.md)
 
