--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-3 [Delta变异病毒肆虐 伊朗忧爆发第五波疫情 – 法国国际广播电台 - RFI](/articles/rfi/1026913.md)
+
 7-3 [意大利300医护入禀法庭 状告当局强制性打疫苗违法](/articles/rfi/1026914.md)
 
 7-3 [法政府承诺对波利尼西亚核辐射后果负起责任](/articles/rfi/1026915.md)
@@ -598,6 +600,4 @@
 6-28 [圣彼得堡疫情严峻 仍将如期举行欧国杯8强赛 – 法国国际广播电台 - RFI](/articles/rfi/1027211.md)
 
 6-28 [从毛泽东到习近平 中国庆祝中共建党百年 - 要闻解说](/articles/rfi/1027212.md)
-
-6-28 [疫情冲击澳洲财政与人口 影响料将长达40年 – 法国国际广播电台 - RFI](/articles/rfi/1027213.md)
 
