--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-3 [事实核查：中国对气候变化究竟负有多大责任？](/articles/dw/1041596.md)
+
 7-3 [日本热海暴雨成灾 泥石流致20人失踪](/articles/dw/1041597.md)
 
 7-3 [Delta变种来袭 新冠疫苗还有效吗？](/articles/dw/1041598.md)
@@ -598,6 +600,4 @@
 6-17 [拜登：我和习近平不是老朋友 只是工作关系](/articles/dw/1041894.md)
 
 6-17 [专访：“西方与中国不应是师生关系”](/articles/dw/1041895.md)
-
-6-17 [美领衔重振民主联盟 专家：中国面临强大阻力](/articles/dw/1041896.md)
 
