--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-3 [台湾对立陶宛在台北设立代表处的计划表示欢迎](/articles/voa/1039733.md)
+
 7-3 [习近平誓言完成统一大业，官媒配合描绘攻台三步骤](/articles/voa/1039734.md)
 
 7-3 [日本讽刺漫画被小红粉们指责为“辱华”](/articles/voa/1039735.md)
@@ -598,6 +600,4 @@
 6-19 [美卫生部监察部门要查NIH资助项目，能否有助新冠病毒溯源？](/articles/voa/1040031.md)
 
 6-19 [联大通过决议 呼吁停止向缅甸输送武器 中国投弃权票](/articles/voa/1040032.md)
-
-6-19 [拜登欧洲行后，布林肯下周再访欧洲](/articles/voa/1040033.md)
 
