--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-4 [【网络民议】滴滴上市后突遭审查，网友热议滴滴将“数据打包给美国”](/articles/cdt/380723.md)
+
 7-3 [【404文库】发声之难：为受害女性发声却多次被警方约谈](/articles/cdt/380731.md)
 
 7-3 [网易看客｜我就是那个同意儿子穿裙子上学的全职爸爸](/articles/cdt/380746.md)
@@ -598,6 +600,4 @@
 5-26 [莫狄骁的山房｜说躺平是不奋斗，约等于说吃苦是要受虐](/articles/cdt/382167.md)
 
 5-26 [维舟｜白银马拉松：天灾还是人祸？](/articles/cdt/382170.md)
-
-5-26 [【CDTV】牧羊人朱克铭接受央视采访改口：这种天气是经常出现的](/articles/cdt/382172.md)
 
