--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-4 [Covid-19:科特迪瓦继续疫苗接种行动](/articles/rfi/1026891.md)
+
 7-4 [法蒙达尔纪市(Montargis)低调举办法中友好活动](/articles/rfi/1026892.md)
 
 7-4 [中资欲购英国最大芯片厂    能否如愿成问号](/articles/rfi/1026893.md)
@@ -598,6 +600,4 @@
 6-29 [科技股续反弹 华尔街那指和标普收在新高 – 法国国际广播电台 - RFI](/articles/rfi/1027189.md)
 
 6-29 [布林肯会晤教皇及梵蒂冈高层 谈中国及全球挑战](/articles/rfi/1027190.md)
-
-6-29 [疫情后居家远程工作 选哪一天最好？ - 今日经济](/articles/rfi/1027191.md)
 
