--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-4 [佛罗里达倒塌公寓楼的残留部分将拆除，确保安全](/articles/voa/1039729.md)
+
 7-4 [德国建议混打疫苗，抗击德尔塔变异病毒](/articles/voa/1039730.md)
 
 7-4 [加勒比飓风继续向北挺进](/articles/voa/1039731.md)
@@ -598,6 +600,4 @@
 6-19 [最高法就哈佛案征询政府意见 媒体人称打压亚裔破坏“精英社会”](/articles/voa/1040027.md)
 
 6-19 [澳大利亚就中国征收高额葡萄酒关税向世贸组织投诉](/articles/voa/1040028.md)
-
-6-19 [《苹果日报》两名高管被拒绝保释](/articles/voa/1040029.md)
 
