--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-4 [白宫将于国庆日举办千人派对庆祝美国战胜新冠病毒，专家说拜登传达错误信息](/articles/rfi/1026889.md)
+
+7-4 [默克尔访问英国：“事情得一步一步来”](/articles/rfi/1026890.md)
+
 7-4 [Covid-19:科特迪瓦继续疫苗接种行动](/articles/rfi/1026891.md)
 
 7-4 [法蒙达尔纪市(Montargis)低调举办法中友好活动](/articles/rfi/1026892.md)
@@ -596,8 +600,4 @@
 6-29 [意大利总理为何公开质疑中国疫苗效力](/articles/rfi/1027187.md)
 
 6-29 [西班牙葡萄牙对英国观光客施加入境新条件](/articles/rfi/1027188.md)
-
-6-29 [科技股续反弹 华尔街那指和标普收在新高 – 法国国际广播电台 - RFI](/articles/rfi/1027189.md)
-
-6-29 [布林肯会晤教皇及梵蒂冈高层 谈中国及全球挑战](/articles/rfi/1027190.md)
 
