--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-4 [河北保定居民庞健被捕近半年  罪名为“涉嫌分裂国家”](/articles/rfa/1045156.md)
+
 7-3 [“公鼠怀孕”作者撤稿  中国科研人员的底线在哪儿？](/articles/rfa/1045157.md)
 
 7-3 [民主人士华盛顿示威 谴责中共带来灾难百年](/articles/rfa/1045158.md)
@@ -598,6 +600,4 @@
 5-31 [异议人士王爱忠遭刑事拘留 跟言论和接受外媒访问有关](/articles/rfa/1045454.md)
 
 5-31 [疫苗外交争霸战 美国能后来居上？](/articles/rfa/1045455.md)
-
-5-31 [台湾疫苗政策遭挑战 蔡政府面临舆论压力锅 呼吁冷静团结](/articles/rfa/1045456.md)
 
