--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,11 +3,11 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
-7-4 [【网络民议】中国航天投资控股公司党委书记张陶谋求推荐院士未遂暴打吴美蓉（85岁）、王晋年两位院士致重伤](/articles/cdt/380713.md)
+7-4 [【网络民议】社会主义学术届风清气正，中国航天企业好书记为党献上大礼](/articles/cdt/380713.md)
 
 7-4 [【网络民议】腾讯视频把《战争之王》的结局给改了](/articles/cdt/380715.md)
 
-7-4 [【网络民议】滴滴上市后突遭审查，网友热议滴滴将“数据打包给美国”](/articles/cdt/380723.md)
+7-3 [【网络民议】滴滴上市后突遭审查，网友热议滴滴将“数据打包给美国”](/articles/cdt/380723.md)
 
 7-3 [【404文库】发声之难：为受害女性发声却多次被警方约谈](/articles/cdt/380731.md)
 
@@ -15,7 +15,7 @@
 
 7-3 [【404文库】三辉图书｜对权力的谄媚，是真心还是表演？](/articles/cdt/380755.md)
 
-7-3 [刘向南 | 十年：我与一位“7·23”温州动车事故遇难者遗属的五次相见（2011-2021）](/articles/cdt/380760.md)
+7-4 [刘向南 | 十年：我与一位“7·23”温州动车事故遇难者遗属的五次相见（2011-2021）](/articles/cdt/380760.md)
 
 7-3 [报导者 | 习时代下，党让中国人读些什么？](/articles/cdt/380762.md)
 
