--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+7-4 [步德奥前政要后尘，法国前总理加盟俄罗斯能源企业董事会](/articles/rfi/1026883.md)
+
+7-4 [菲国1运输机搭载85人坠毁南部 目前15人获救 – 法国国际广播电台 - RFI](/articles/rfi/1026884.md)
+
+7-4 [日本热海土石流 2死约20人失踪 – 法国国际广播电台 - RFI](/articles/rfi/1026885.md)
+
+7-4 [日本热海恐怖土石流 外出就医、逃往3楼逃一劫 – 法国国际广播电台 - RFI](/articles/rfi/1026886.md)
+
 7-4 [英格兰4比0痛宰乌克兰  顺利挺进欧国杯4强 – 法国国际广播电台 - RFI](/articles/rfi/1026887.md)
 
 7-4 [俄罗斯男网好手梅迪维夫逆转胜 首闯温网16强 – 法国国际广播电台 - RFI](/articles/rfi/1026888.md)
@@ -592,12 +600,4 @@
 6-29 [欧洲杯爆冷门 法国队点球失败遭瑞士淘汰](/articles/rfi/1027181.md)
 
 6-29 [专家预言Delta一个月后全美大爆发 拜登警告将有更多美国人死亡](/articles/rfi/1027182.md)
-
-6-29 [宗教改革的斗士马丁·路德第六节 路德出击之二 九十五条论纲 - 欧洲思想文化长廊](/articles/rfi/1027183.md)
-
-6-29 [法国极右领导人玛丽娜·勒庞遭遇急刹车](/articles/rfi/1027184.md)
-
-6-29 [美国强化抗中联盟 习近平只有见机行事的普京 - 要闻分析](/articles/rfi/1027185.md)
-
-6-29 [中国接种疫苗已超10亿剂，怎么做到的？ - 法国世界报](/articles/rfi/1027186.md)
 
