--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-4 [疫情一年后 中国人更青睐本土品牌](/articles/dw/1041588.md)
+
 7-4 [疫情一年后 中国人越来越看重本国品牌](/articles/dw/1041589.md)
 
 7-4 [树皮做衣服 时尚又环保](/articles/dw/1041590.md)
@@ -598,6 +600,4 @@
 6-17 [训人又道歉：拜登也对记者发脾气？](/articles/dw/1041886.md)
 
 6-17 [1098克拉！非洲国家博茨瓦纳发现“鸡蛋钻”](/articles/dw/1041887.md)
-
-6-17 [德语媒体：北约不应过度聚焦中国](/articles/dw/1041888.md)
 
