--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-4 [太空行走约7小时 中国宇航员出舱作业](/articles/dw/1041584.md)
+
+7-4 [菲律宾军机坠毁 17人丧生](/articles/dw/1041585.md)
+
+7-4 [疫情肆虐全球，但没耽误富翁赚钱](/articles/dw/1041586.md)
+
+7-4 [来自古巴的“奇迹疫苗”](/articles/dw/1041587.md)
+
 7-4 [疫情一年后 中国人更青睐本土品牌](/articles/dw/1041588.md)
 
 7-4 [疫情一年后 中国人越来越看重本国品牌](/articles/dw/1041589.md)
@@ -592,12 +600,4 @@
 6-18 [以疫牟利? 台航空公司卖空位惹议](/articles/dw/1041882.md)
 
 6-18 [欧美谴责港府追杀 《苹果》能撑多久?](/articles/dw/1041883.md)
-
-6-18 [拜习会有谱? 时机在G20峰会](/articles/dw/1041884.md)
-
-6-17 [欧盟放松入境管制 美国台湾香港在列](/articles/dw/1041885.md)
-
-6-17 [训人又道歉：拜登也对记者发脾气？](/articles/dw/1041886.md)
-
-6-17 [1098克拉！非洲国家博茨瓦纳发现“鸡蛋钻”](/articles/dw/1041887.md)
 
