--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-4 [世纪热浪袭击加拿大   小镇几乎被烧光](/articles/dw/1041583.md)
+
 7-4 [太空行走约7小时 中国宇航员出舱作业](/articles/dw/1041584.md)
 
 7-4 [菲律宾军机坠毁 17人丧生](/articles/dw/1041585.md)
@@ -598,6 +600,4 @@
 6-18 [台湾疫苗荒  谁选择赴大陆丶美国打针？](/articles/dw/1041881.md)
 
 6-18 [以疫牟利? 台航空公司卖空位惹议](/articles/dw/1041882.md)
-
-6-18 [欧美谴责港府追杀 《苹果》能撑多久?](/articles/dw/1041883.md)
 
