--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-4 [中国网民抵制维他奶](/articles/voa/1039726.md)
+
 7-4 [中国外长警告敌手不要误判中国意向](/articles/voa/1039727.md)
 
 7-4 [巴西各地爆发抗议，要求总统辞职](/articles/voa/1039728.md)
@@ -598,6 +600,4 @@
 6-20 [中国继续严打比特币挖矿活动](/articles/voa/1040024.md)
 
 6-19 [“新黄雀行动”营救香港民主抗争者接受美国会特别嘉奖](/articles/voa/1040025.md)
-
-6-19 [伊朗强硬派司法总监莱希赢得总统选举](/articles/voa/1040026.md)
 
