--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-4 [菲律宾军机坠毁 45人丧生](/articles/dw/1041578.md)
+
+7-4 [袭警案发酵  警方：献花等同于支持恐怖](/articles/dw/1041579.md)
+
+7-4 [被指违法收集个人信息 “滴滴出行”下架](/articles/dw/1041580.md)
+
 7-4 [墙外文摘：再教育中心会出现在香港吗？](/articles/dw/1041581.md)
 
 7-4 [从排华到融入: 巴拿马华人社区40年巨变](/articles/dw/1041582.md)
@@ -594,10 +600,4 @@
 6-18 [郭台铭和台积电获授权 出面洽购BNT疫苗](/articles/dw/1041876.md)
 
 6-18 [史塔西档案馆：直面东德历史](/articles/dw/1041877.md)
-
-6-18 [拒绝和可口可乐同框！ C罗正面刚](/articles/dw/1041878.md)
-
-6-18 [金正恩：“应尤其准备好对抗美国”](/articles/dw/1041879.md)
-
-6-18 [中國神州十二號升空](/articles/dw/1041880.md)
 
