--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-4 [中航投党委书记“文武双全”，毛遂自荐遭婉拒竟对求荐人拳脚相加](/articles/voa/1039723.md)
+
 7-4 [美台重启TIFA会议 中国惠台、制裁皆无门](/articles/voa/1039724.md)
 
 7-4 [美国新冠病毒大流行缓解，美国人欢庆七月四日国庆节](/articles/voa/1039725.md)
@@ -598,6 +600,4 @@
 6-20 [巴西新冠病毒死亡人数超过50万](/articles/voa/1040021.md)
 
 6-20 [美国正面临三重气象威胁](/articles/voa/1040022.md)
-
-6-20 [澳大利亚开始试验鼻腔喷雾式新冠疫苗](/articles/voa/1040023.md)
 
