--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-5 [疫情打乱海运 货柜运价创新高 – 法国国际广播电台 - RFI](/articles/rfi/1026849.md)
+
+7-5 [菲律宾军用运输机坠毁增至45死 – 法国国际广播电台 - RFI](/articles/rfi/1026850.md)
+
+7-5 [热带风暴艾尔莎掠过海地  逼近古巴 – 法国国际广播电台 - RFI](/articles/rfi/1026851.md)
+
 7-5 [埃及总统塞西为海军新基地落成剪彩](/articles/rfi/1026852.md)
 
 7-5 [泰媒：中美比抗疫 中共创奇迹 - 曼谷专栏](/articles/rfi/1026853.md)
@@ -594,10 +600,4 @@
 6-29 [法新社统计：全球逾1亿8135万人染疫 至少393万人丧生 – 法国国际广播电台 - RFI](/articles/rfi/1027147.md)
 
 6-29 [Delta变异病毒扩散 俄罗斯单日652死创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027148.md)
-
-6-29 [法国议员递交谴责新疆种族屠杀议案 - 要闻解说](/articles/rfi/1027149.md)
-
-6-29 [北京外交战狼落入陷阱](/articles/rfi/1027150.md)
-
-6-29 [调查：全球手机App营收 今年上半年创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027151.md)
 
