--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-5 [尼日利亚约鲁巴人谋建国 示威遭驱散](/articles/rfi/1026848.md)
+
 7-5 [疫情打乱海运 货柜运价创新高 – 法国国际广播电台 - RFI](/articles/rfi/1026849.md)
 
 7-5 [菲律宾军用运输机坠毁增至45死 – 法国国际广播电台 - RFI](/articles/rfi/1026850.md)
@@ -598,6 +600,4 @@
 6-29 [国际知名学者再度联署呼吁对新冠病毒的来源展开调查](/articles/rfi/1027146.md)
 
 6-29 [法新社统计：全球逾1亿8135万人染疫 至少393万人丧生 – 法国国际广播电台 - RFI](/articles/rfi/1027147.md)
-
-6-29 [Delta变异病毒扩散 俄罗斯单日652死创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027148.md)
 
