--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [美国：在阿富汗战火肆虐之际没有关闭大使馆的计划](/articles/voa/1039721.md)
+
 7-5 [滴滴刚在美上市便遭中国网信办APP下架处罚](/articles/voa/1039722.md)
 
 7-4 [中航投党委书记“文武双全”，毛遂自荐遭婉拒竟对求荐人拳脚相加](/articles/voa/1039723.md)
@@ -598,6 +600,4 @@
 6-20 [百年党庆在即 中共创造的91种精神何为真？](/articles/voa/1040019.md)
 
 6-20 [伊朗核协议缔约方星期天正式会谈](/articles/voa/1040020.md)
-
-6-20 [巴西新冠病毒死亡人数超过50万](/articles/voa/1040021.md)
 
