--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [苏伊士运河管理局称达成放行被扣押船只的协议](/articles/voa/1039719.md)
+
 7-5 [菲律宾军机坠毁45人死亡](/articles/voa/1039720.md)
 
 7-5 [美国：在阿富汗战火肆虐之际没有关闭大使馆的计划](/articles/voa/1039721.md)
@@ -598,6 +600,4 @@
 6-20 [台湾感谢美国大规模疫苗援助](/articles/voa/1040017.md)
 
 6-20 [中共党史掩盖和歪曲的重大历史事件(4)--抗日，到底是“中流砥柱”还是保存实力？](/articles/voa/1040018.md)
-
-6-20 [百年党庆在即 中共创造的91种精神何为真？](/articles/voa/1040019.md)
 
