--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [印尼一医院因缺氧致63名新冠患者丧生 印度数千人注射假疫苗](/articles/voa/1039718.md)
+
 7-5 [苏伊士运河管理局称达成放行被扣押船只的协议](/articles/voa/1039719.md)
 
 7-5 [菲律宾军机坠毁45人死亡](/articles/voa/1039720.md)
@@ -598,6 +600,4 @@
 6-20 [全球新冠病毒致死人数突破380万 Delta变异株构成更大威胁](/articles/voa/1040016.md)
 
 6-20 [台湾感谢美国大规模疫苗援助](/articles/voa/1040017.md)
-
-6-20 [中共党史掩盖和歪曲的重大历史事件(4)--抗日，到底是“中流砥柱”还是保存实力？](/articles/voa/1040018.md)
 
