--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-5 [忧国安法效力 多个香港民间组织宣布解散](/articles/dw/1041577.md)
+
 7-4 [菲律宾军机坠毁 45人丧生](/articles/dw/1041578.md)
 
 7-4 [袭警案发酵  警方：献花等同于支持恐怖](/articles/dw/1041579.md)
@@ -598,6 +600,4 @@
 6-18 [韩国主教力促 教宗会访问朝鲜吗？](/articles/dw/1041875.md)
 
 6-18 [郭台铭和台积电获授权 出面洽购BNT疫苗](/articles/dw/1041876.md)
-
-6-18 [史塔西档案馆：直面东德历史](/articles/dw/1041877.md)
 
