--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,12 @@
 纽约时报
 ------
 
+7-5 [中国被指在西北设导弹发射井，加强战略核能力](/articles/nyt/1046645.md)
+
+7-5 [简报：中共党校如何培养“忠诚接班人”；滴滴被勒令下架整改](/articles/nyt/1046646.md)
+
+7-5 [“红色摇篮”：中共如何培养“忠诚接班人”](/articles/nyt/1046647.md)
+
 7-2 [有关特朗普集团遭刑事指控，你应该了解的七个问题](/articles/nyt/1046648.md)
 
 7-2 [红色歌剧、爱国说唱：艺术“献礼”中共百年](/articles/nyt/1046649.md)
@@ -594,10 +600,4 @@
 4-21 [死亡和大流行教会我的事](/articles/nyt/1046943.md)
 
 4-21 [朝韩军备竞赛升级，半岛微妙平衡恐难维持](/articles/nyt/1046944.md)
-
-4-21 [后卡斯特罗时代的古巴：社会主义理想走向何方](/articles/nyt/1046945.md)
-
-4-21 [“永远跟党走”：中共为建党百年纪念活动宣传造势](/articles/nyt/1046946.md)
-
-4-21 [从日本到澳洲，为何亚太国家疫苗接种缓慢？](/articles/nyt/1046947.md)
 
