--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-5 [MLB明星赛 投手打者名单都有大谷翔平 – 法国国际广播电台 - RFI](/articles/rfi/1026833.md)
+
 7-5 [热带风暴艾尔莎  横扫加勒比海造成死伤 – 法国国际广播电台 - RFI](/articles/rfi/1026834.md)
 
 7-5 [自3月遭扣留至今  长赐轮将于7日驶离苏伊士运河 – 法国国际广播电台 - RFI](/articles/rfi/1026835.md)
@@ -598,6 +600,4 @@
 6-30 [法国队输球回家，从布加勒斯特到巴黎的巨大失望](/articles/rfi/1027131.md)
 
 6-30 [【视频】:史无前例！南非前总统祖马被判入狱](/articles/rfi/1027132.md)
-
-6-30 [中共庆其百年寿诞 上海大量警力戒备 空拍机禁飞半月](/articles/rfi/1027133.md)
 
