--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-5 [欧中投资协定卡关  欧盟驻华外交官齐发声](/articles/dw/1041575.md)
+
+7-5 [遭扣三个月後 「长赐号」终将驶离苏伊士运河](/articles/dw/1041576.md)
+
 7-5 [忧国安法效力 多个香港民间组织宣布解散](/articles/dw/1041577.md)
 
 7-4 [菲律宾军机坠毁 45人丧生](/articles/dw/1041578.md)
@@ -596,8 +600,4 @@
 6-18 [流亡藏人新司政希望重启同中国政府的对话](/articles/dw/1041873.md)
 
 6-18 [如何说服外国不用华为？美国打钱！](/articles/dw/1041874.md)
-
-6-18 [韩国主教力促 教宗会访问朝鲜吗？](/articles/dw/1041875.md)
-
-6-18 [郭台铭和台积电获授权 出面洽购BNT疫苗](/articles/dw/1041876.md)
 
