--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-5 [滴滴被勒令下架整改，中国互联网监管力度升级](/articles/nyt/1046643.md)
+
 7-5 [这些中国年轻人选择“躺平”，北京不喜欢这个想法](/articles/nyt/1046644.md)
 
 7-5 [中国被指在西北设导弹发射井，加强战略核能力](/articles/nyt/1046645.md)
@@ -598,6 +600,4 @@
 4-22 [文在寅敦促拜登与朝鲜接触，呼吁中美加强合作](/articles/nyt/1046941.md)
 
 4-21 [亚裔艺术家如何对抗种族主义和仇恨](/articles/nyt/1046942.md)
-
-4-21 [死亡和大流行教会我的事](/articles/nyt/1046943.md)
 
