--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [拜登在白宫办聚会庆祝建国245周年 “接种疫苗是最爱国的行动”](/articles/voa/1039717.md)
+
 7-5 [印尼一医院因缺氧致63名新冠患者丧生 印度数千人注射假疫苗](/articles/voa/1039718.md)
 
 7-5 [苏伊士运河管理局称达成放行被扣押船只的协议](/articles/voa/1039719.md)
@@ -598,6 +600,4 @@
 6-20 [香港民间人权阵线近二十年来首次无法申请七一大游行](/articles/voa/1040015.md)
 
 6-20 [全球新冠病毒致死人数突破380万 Delta变异株构成更大威胁](/articles/voa/1040016.md)
-
-6-20 [台湾感谢美国大规模疫苗援助](/articles/voa/1040017.md)
 
