--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-5 [鱼眼观察｜打院士的张陶，这个人不简单​](/articles/cdt/380699.md)
+
 7-4 [【404档案馆】CDT播客第10期：谁要是让我这个生日过得不舒坦，我就让他一辈子不舒坦](/articles/cdt/380705.md)
 
 7-4 [【网络民议】社会主义学术届风清气正，中国航天企业好书记为党献上大礼](/articles/cdt/380713.md)
@@ -598,6 +600,4 @@
 5-27 [王陶陶｜两种矛盾的变化：中国网络意识形态的现状与隐忧](/articles/cdt/382148.md)
 
 5-27 [冰点周刊｜在大厂实习](/articles/cdt/382150.md)
-
-5-27 [秦兽 | 有人躺赢就有人躺平](/articles/cdt/382152.md)
 
