--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+7-5 [字节跳动：有关BytePlus出售TikTok AI技术报导不实 相关业务仅提供技术服务](/articles/reuters/1036131.md)
+
+7-5 [独家：缅甸加大施压电信业禁高管离境 要求启动间谍监视软件](/articles/reuters/1036132.md)
+
 7-5 [天然气需求反弹威胁到全球气候目标的实现--IEA](/articles/reuters/1036133.md)
 
 7-5 [黑客要求遭受大规模网络攻击的企业支付7,000万美元赎金解锁数据--博客](/articles/reuters/1036134.md)
@@ -596,8 +600,4 @@
 6-28 [综述：中国5月工业利润稳定恢复 但大宗商品涨价加大下游成本压力](/articles/reuters/1036429.md)
 
 6-28 [金正恩近况曝光瘦了一圈 朝鲜民众伤心落泪--朝鲜官媒](/articles/reuters/1036430.md)
-
-6-28 [美国去年炼油产能萎缩4.5% 因疫情导致炼厂关闭](/articles/reuters/1036431.md)
-
-6-28 [格力电器将一期原拟用于员工持股或激励的回购股份变为注销 股数逾1亿股](/articles/reuters/1036432.md)
 
