--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-5 [“滴滴出行”等4个叫车平台应用程式   赴美上市后隨即被下架及审查](/articles/rfa/1045155.md)
+
 7-4 [河北保定居民庞健被捕近半年  罪名为“涉嫌分裂国家”](/articles/rfa/1045156.md)
 
 7-3 [“公鼠怀孕”作者撤稿  中国科研人员的底线在哪儿？](/articles/rfa/1045157.md)
@@ -598,6 +600,4 @@
 6-1 [世维会主席胞弟遭判无期徒刑 年底改选恐增变数](/articles/rfa/1045453.md)
 
 5-31 [异议人士王爱忠遭刑事拘留 跟言论和接受外媒访问有关](/articles/rfa/1045454.md)
-
-5-31 [疫苗外交争霸战 美国能后来居上？](/articles/rfa/1045455.md)
 
