--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-5 [习近平：中共和中国分不开 余茂春：中国人民绝不答应习的说法](/articles/rfa/1045152.md)
+
 7-5 [台湾智库两年来维持与对岸中办与军方联参沟通管道](/articles/rfa/1045153.md)
 
 7-5 [北京驻港国安警告不能 “怀柔”        港警进一步封杀网上言论](/articles/rfa/1045154.md)
@@ -598,6 +600,4 @@
 6-1 [纪念六四  加拿大民主人士称海外接棒格外重要](/articles/rfa/1045450.md)
 
 6-1 [中国越界抽砂后 又在马祖东莒外海兴建离岸发电机](/articles/rfa/1045451.md)
-
-6-1 [梁振英不断争取曝光机会   被指为竞选特首造势](/articles/rfa/1045452.md)
 
