--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-5 [【立此存照】“您浏览到此书中不允许查看的页面”](/articles/cdt/380675.md)
+
 7-5 [燕梳时评｜书记殴打院士完整视频曝光：打人是真，但王院士该打？](/articles/cdt/380678.md)
 
 7-5 [无妄斋｜致孤独殉身的义士](/articles/cdt/380686.md)
@@ -598,6 +600,4 @@
 5-30 [【CDT敏感词周报】第二十六期：三年饥荒、躺平学](/articles/cdt/382099.md)
 
 5-30 [【CDT周报】第十九期：世上不乏极限马拉松，但以死亡率而言，甘肃的马拉松最危险](/articles/cdt/382100.md)
-
-5-28 [【旧闻重温】孙立平：极权主义是一种人类历史上从未有过的新的统治形态](/articles/cdt/382104.md)
 
