--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [中国校外教培遭整顿 当局监管被批治标不治本](/articles/voa/1039714.md)
+
 7-5 [中国当局处罚DiDi真是为了保护个人信息？](/articles/voa/1039715.md)
 
 7-5 [白宫：正设法帮助因勒索软件攻击受害的商家](/articles/voa/1039716.md)
@@ -598,6 +600,4 @@
 6-21 [坚拒“一中承诺”换工作签证，台湾“调整”驻港作业方式](/articles/voa/1040012.md)
 
 6-21 [俄罗斯大使飞返美国期待两国“平等及务实”关系](/articles/voa/1040013.md)
-
-6-21 [政策矛盾导致所得分配失衡 中国城乡差距持续恶化](/articles/voa/1040014.md)
 
