--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-5 [维他奶因香港刺警案陷入风波 股价暴跌艺人解约](/articles/voa/1039713.md)
+
 7-5 [中国校外教培遭整顿 当局监管被批治标不治本](/articles/voa/1039714.md)
 
 7-5 [中国当局处罚DiDi真是为了保护个人信息？](/articles/voa/1039715.md)
@@ -598,6 +600,4 @@
 6-21 [拜登将在美军撤离期间在白宫接待阿富汗领导人](/articles/voa/1040011.md)
 
 6-21 [坚拒“一中承诺”换工作签证，台湾“调整”驻港作业方式](/articles/voa/1040012.md)
-
-6-21 [俄罗斯大使飞返美国期待两国“平等及务实”关系](/articles/voa/1040013.md)
 
