--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-5 [德、西、瑞典：“结束核武器试验”](/articles/dw/1041564.md)
+
 7-5 [过街“饭圈” 政府喊打](/articles/dw/1041565.md)
 
 7-5 [客座评论：习近平为什么要撒谎？](/articles/dw/1041566.md)
@@ -598,6 +600,4 @@
 6-19 [新冠变异毒株Delta 到底有多危险？](/articles/dw/1041862.md)
 
 6-18 [熊出没！札幌4人遭袭受伤](/articles/dw/1041863.md)
-
-6-18 [德语媒体：北约不是在全球伸张价值观的联合体](/articles/dw/1041864.md)
 
