--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-5 [中国重提新疆七五事件   人权组织批企图掩盖历史真相](/articles/rfa/1045151.md)
+
 7-5 [习近平：中共和中国分不开 余茂春：中国人民绝不答应习的说法](/articles/rfa/1045152.md)
 
 7-5 [台湾智库两年来维持与对岸中办与军方联参沟通管道](/articles/rfa/1045153.md)
@@ -598,6 +600,4 @@
 6-1 [一带一路桥头堡意大利  转向谴责中国侵犯人权](/articles/rfa/1045449.md)
 
 6-1 [纪念六四  加拿大民主人士称海外接棒格外重要](/articles/rfa/1045450.md)
-
-6-1 [中国越界抽砂后 又在马祖东莒外海兴建离岸发电机](/articles/rfa/1045451.md)
 
