--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-6 [美国加速阿富汗撤军  塔利班卷土重来前景引发担忧 - 国际纵横](/articles/rfi/1026786.md)
+
+7-5 [“滴滴”被审查下架 传因股东有“江派”太子党？](/articles/rfi/1026787.md)
+
+7-5 [希尔顿计划在新疆清真寺废墟上建酒店引发愤怒 - 法国报纸摘要](/articles/rfi/1026788.md)
+
 7-5 [新西兰工党也批北京 执政党议员指控中国强摘人体器官](/articles/rfi/1026789.md)
 
 7-5 [贝佐斯今天退休了！](/articles/rfi/1026790.md)
@@ -594,10 +600,4 @@
 6-30 [道奇王牌投手鲍尔遭控攻击女子 警启动刑事调查 – 法国国际广播电台 - RFI](/articles/rfi/1027084.md)
 
 6-30 [全球8成新建燃煤电厂都在亚洲5国 违抗暖化目标 – 法国国际广播电台 - RFI](/articles/rfi/1027085.md)
-
-6-30 [哥伦比亚军方查获6吨古柯硷 – 法国国际广播电台 - RFI](/articles/rfi/1027086.md)
-
-6-30 [欧洲考古日，明星高卢人 - 文化遗产](/articles/rfi/1027087.md)
-
-6-30 [美商务部长：台积电总裁请求美协助取得疫苗「希望成为好伙伴」](/articles/rfi/1027088.md)
 
