--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-6 [巴黎自认俊美座椅遭批 要被迫拆除](/articles/rfi/1026785.md)
+
 7-6 [美国加速阿富汗撤军  塔利班卷土重来前景引发担忧 - 国际纵横](/articles/rfi/1026786.md)
 
 7-5 [“滴滴”被审查下架 传因股东有“江派”太子党？](/articles/rfi/1026787.md)
@@ -598,6 +600,4 @@
 6-30 [黎巴待出售新的建住房越来越稀少 - 今日经济](/articles/rfi/1027083.md)
 
 6-30 [道奇王牌投手鲍尔遭控攻击女子 警启动刑事调查 – 法国国际广播电台 - RFI](/articles/rfi/1027084.md)
-
-6-30 [全球8成新建燃煤电厂都在亚洲5国 违抗暖化目标 – 法国国际广播电台 - RFI](/articles/rfi/1027085.md)
 
