--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [习近平同欧洲领导人举行视频会议 讨论中欧关系](/articles/voa/1039709.md)
+
 7-6 [世维会发声明 纪念乌鲁木齐大屠杀12周年](/articles/voa/1039710.md)
 
 7-5 [国安法恶化政治环境，11万港人一年来远走他乡](/articles/voa/1039711.md)
@@ -598,6 +600,4 @@
 6-21 [魏京生：即使我没在”民主墙”出现，后来也逃不过去](/articles/voa/1040007.md)
 
 6-21 [黎智英顾问称香港苹果日报可能几日内被迫关闭](/articles/voa/1040008.md)
-
-6-21 [美国安顾问：伊朗核问题仍将取决于哈梅内伊](/articles/voa/1040009.md)
 
