--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-6 [佛罗里达坍塌公寓废墟中又发现3具遇难者尸体](/articles/voa/1039706.md)
+
+7-6 [时事大家谈: 西方学者齐慕实(Timothy Cheek)：从十场人生看中共一百年](/articles/voa/1039707.md)
+
 7-6 [中资欲购英国半导体厂，美英政府不乐见或加以阻止](/articles/voa/1039708.md)
 
 7-6 [习近平同欧洲领导人举行视频会议 讨论中欧关系](/articles/voa/1039709.md)
@@ -596,8 +600,4 @@
 6-21 [矢板明夫：曾经以为中国最幸福](/articles/voa/1040004.md)
 
 6-21 [宋永毅：失去自由的绝望中，学《毛选》学出个“反革命”](/articles/voa/1040005.md)
-
-6-21 [胡平：“起义光荣”的国军父亲在镇反运动中被处决](/articles/voa/1040006.md)
-
-6-21 [魏京生：即使我没在”民主墙”出现，后来也逃不过去](/articles/voa/1040007.md)
 
