--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-6 [如何回答对华问题？布林肯：美欧应共同维护战后国际秩序 - 国际纵横](/articles/rfi/1026763.md)
+
 7-6 [滴滴出行刚在华尔街大放异彩，中国监管机构就宣布对其展开调查 - 法国世界报](/articles/rfi/1026764.md)
 
 7-6 [宗教改革的斗士马丁·路德第七节 路德掀起的风暴 - 欧洲思想文化长廊](/articles/rfi/1026765.md)
@@ -598,6 +600,4 @@
 7-1 [温网/乔科维奇直落三克敌 生涯第15次晋级第3轮 – 法国国际广播电台 - RFI](/articles/rfi/1027061.md)
 
 7-1 [法国宣布 7月7日起入境外国游客新冠筛检将自费](/articles/rfi/1027062.md)
-
-7-1 [法国世界报：法国担心出现第四波疫情 - 法国世界报](/articles/rfi/1027063.md)
 
