--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+7-6 [深圳国资弃购出局苏宁易购依旧姓“苏” 16.96%股份落入江苏新新零售基金](/articles/reuters/1036112.md)
+
 7-5 [图表新闻：境外机构6月继续增持中国银行间债券 但规模稍降国债环比减半](/articles/reuters/1036113.md)
 
 7-5 [中国上海电气称遭证监会立案调查 此前旗下子公司突爆83亿大雷](/articles/reuters/1036114.md)
@@ -598,6 +600,4 @@
 6-28 [焦点：美国页岩油企无意增产 冷眼看待油价跳涨](/articles/reuters/1036410.md)
 
 6-28 [分析：与世界隔绝 澳洲国内经济一片红火](/articles/reuters/1036411.md)
-
-6-28 [滴滴出行40亿美元IPO将于周一提前结束认购--消息人士](/articles/reuters/1036412.md)
 
