--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-6 [港府若修数据保护法 脸书谷歌推特扬言撤港](/articles/dw/1041557.md)
+
 7-5 [欧中投资协定卡关  习近平与马克龙、默克尔视频](/articles/dw/1041558.md)
 
 7-5 [安全疑虑 中国互联网企业连遭打击](/articles/dw/1041559.md)
@@ -598,6 +600,4 @@
 6-19 [中国汽车来了 德国人会买吗？](/articles/dw/1041855.md)
 
 6-19 [德法领导人：俄罗斯是一大挑战](/articles/dw/1041856.md)
-
-6-19 [葡萄酒销量暴跌 澳大利亚决定将中国告上WTO](/articles/dw/1041857.md)
 
