--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+7-6 [亚股开盘微涨 中国科技股监管忧虑拖累港股](/articles/reuters/1036090.md)
+
+7-6 [焦点：英国拟改革科技公司上市规定 以加强竞争力追赶纽约](/articles/reuters/1036091.md)
+
+7-6 [疫苗接种推进之际 欧洲和中国间的航空交通应尽快恢复--法国总统办公室](/articles/reuters/1036092.md)
+
+7-6 [中国小米集团委托12家银行牵头美元债券发行事宜](/articles/reuters/1036093.md)
+
+7-6 [习近平同马克龙、默克尔举行视频峰会 希望中欧扩大共识和合作](/articles/reuters/1036094.md)
+
 7-6 [中国移动成立芯片公司 进军物联网芯片制造业](/articles/reuters/1036095.md)
 
 7-6 [比亚迪上半年新能源汽车销量达15.46万辆 同比增长155%](/articles/reuters/1036096.md)
@@ -590,14 +600,4 @@
 6-29 [油价挫2%至一周低点 市场等待OPEC+会议结果](/articles/reuters/1036388.md)
 
 6-29 [金价陷于窄幅区间 德尔塔变异毒株忧虑抵消美联储鹰派倾向](/articles/reuters/1036389.md)
-
-6-29 [路透测算的人民币中间价料略贬至6.4586元附近 上日美指略升](/articles/reuters/1036390.md)
-
-6-28 [中国平安拟至多330亿元入局六大来福士广场 凯德回收资本逾20亿新元](/articles/reuters/1036391.md)
-
-6-28 [中国央行：推动实际贷款利率进一步降低 加强政策协调防范外部冲击](/articles/reuters/1036392.md)
-
-6-28 [中国5月外汇市场成交略降 银行对客衍生品成交占比创四个月新高](/articles/reuters/1036393.md)
-
-6-28 [百度旗下集度汽车聘请前凯迪拉克设计师领导设计工作室--消息人士](/articles/reuters/1036394.md)
 
