--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-6 [美国科技巨头质疑港府推进修改数据安全法](/articles/nyt/1046638.md)
+
 7-6 [滴滴遭整改背后，中国政府发出了什么信号？](/articles/nyt/1046639.md)
 
 7-6 [简报：中国政府为何整治滴滴；美国科技巨头质疑港府推进修改数据安全法](/articles/nyt/1046640.md)
@@ -598,6 +600,4 @@
 4-23 [香港媒体遭遇正面攻击，记者成为当局新目标](/articles/nyt/1046936.md)
 
 4-22 [“消失”的马云给中国富豪带来的启示](/articles/nyt/1046937.md)
-
-4-22 [我们打赢了弗洛伊德这一仗，但这场战争远未结束](/articles/nyt/1046938.md)
 
