--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [特首续推隐私条例 谷歌和脸书可能撤离香港](/articles/voa/1039698.md)
+
 7-6 [日美联手应对台海危机？日本副首相：正密切注视局势](/articles/voa/1039699.md)
 
 7-6 [1500名救援人员在日本山体滑坡现场搜寻幸存者](/articles/voa/1039700.md)
@@ -598,6 +600,4 @@
 6-22 [美警示中国：若拒绝新冠病毒溯源真正调查将被国际孤立](/articles/voa/1039996.md)
 
 6-21 [伊朗总统当选人称他不会见拜登，并重申强硬派立场](/articles/voa/1039997.md)
-
-6-21 [中国严打加密货币挖矿及交易 比特币价格周一暴跌](/articles/voa/1039998.md)
 
