--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-6 [中国「春苗行动」：台湾人和海外华人买单吗？](/articles/dw/1041551.md)
+
 7-6 [港府公布候选人审查委员会 专家：北京全权掌握](/articles/dw/1041552.md)
 
 7-6 [日追赠台湾百万剂疫苗 副相再提防卫台湾](/articles/dw/1041553.md)
@@ -598,6 +600,4 @@
 6-20 [边开车边充电？电动车未来可期！](/articles/dw/1041849.md)
 
 6-19 [偷拍数千女生并以“美丑”排序 《校花》被撤展](/articles/dw/1041850.md)
-
-6-19 [巴勒斯坦拒绝以色列提供新冠疫苗](/articles/dw/1041851.md)
 
