--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+7-6 [中国反指美国压迫企业开后门取数据 是全球网络安全最大胁迫](/articles/rfi/1026736.md)
+
+7-6 [美国律师事务所传对滴滴发起集体诉讼 前景不明](/articles/rfi/1026737.md)
+
+7-6 [热带风暴艾尔莎北移美国佛州 古巴疏散10万人 – 法国国际广播电台 - RFI](/articles/rfi/1026738.md)
+
+7-6 [芝加哥国庆周末枪枝暴力频传 88人遭枪击14死 – 法国国际广播电台 - RFI](/articles/rfi/1026739.md)
+
+7-6 [德国一名政治学者被逮捕 遭指为中国做间谍](/articles/rfi/1026740.md)
+
+7-6 [响应习号召 中国移动也成立芯片公司](/articles/rfi/1026741.md)
+
 7-6 [北京严正抗议日本应与美国一同防卫台湾 岸信夫称“将视具体情况判断”](/articles/rfi/1026742.md)
 
 7-6 [90年代国企改革翻版？海航倒闭被检举成就了公司变家族企业？](/articles/rfi/1026743.md)
@@ -588,16 +600,4 @@
 7-1 [日本自民党干事长就中共建党一百周年致电中方](/articles/rfi/1027034.md)
 
 7-1 [中共建党百年 习近平：列强欺凌中国的时代不再 – 法国国际广播电台 - RFI](/articles/rfi/1027035.md)
-
-7-1 [美国护照将新增第3性别栏 保障性小众 – 法国国际广播电台 - RFI](/articles/rfi/1027036.md)
-
-7-1 [紧张：7.1礼宾府遭丢易燃物 港警再封维园防集结](/articles/rfi/1027037.md)
-
-7-1 [美国跨党议员再推法案 加快港人取得难民身分](/articles/rfi/1027038.md)
-
-7-1 [北美西部破纪录高温多人猝死 野火干旱风险增 – 法国国际广播电台 - RFI](/articles/rfi/1027039.md)
-
-7-1 [国安新风：司法律政官员获授勋人数大增 民主派人士没上榜](/articles/rfi/1027040.md)
-
-7-1 [中共党庆：习近平称要落实港澳全面管治和国安 中联办首办升旗礼贺香港回归](/articles/rfi/1027041.md)
 
