--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+7-6 [中国三孩政策未正式落地  各地继续收超生罚款](/articles/rfa/1045147.md)
+
+7-6 [日本副首相：中国若侵台 美日该防卫台湾](/articles/rfa/1045148.md)
+
 7-6 [欧盟回应关注新疆请愿书  持续为人权发声](/articles/rfa/1045149.md)
 
 7-5 [亚太遭勒索软体攻击比疫情前提升2.4倍 台湾是第5大重灾区](/articles/rfa/1045150.md)
@@ -596,8 +600,4 @@
 6-1 [日本真心中国假意？台湾人对疫苗赠予国两样情？](/articles/rfa/1045445.md)
 
 6-1 [民众轰生育政策利国不利民  埋怨政府当人民是韭菜](/articles/rfa/1045446.md)
-
-6-1 [台湾撑起华人世界 纪念六四、勿忘六四](/articles/rfa/1045447.md)
-
-6-1 [视觉艺术家协会线上颁奖 纪念六四32周年](/articles/rfa/1045448.md)
 
