--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+7-6 [针对日本副首相涉台言论 中国外交部表示坚决反对并向日方提出严正抗议](/articles/reuters/1036077.md)
+
 7-6 [人民币收盘缩量小跌 暂进入“暑期”淡季短期难言方向](/articles/reuters/1036078.md)
 
 7-6 [摩根士丹利称OPEC僵局可能意味着油市短线看涨](/articles/reuters/1036079.md)
@@ -598,6 +600,4 @@
 6-29 [币安等加密货币企业放弃在英国监管机构注册 全球对该行业审查加强](/articles/reuters/1036375.md)
 
 6-29 [美国众议院共和党人反对民主党牵头的应对中国法案](/articles/reuters/1036376.md)
-
-6-29 [独家：软银正缩减机器人业务 已停产人形机器人Pepper--消息](/articles/reuters/1036377.md)
 
