--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-6 [【404文库】古三古四｜滴滴落到如此下场，到底得罪了谁？](/articles/cdt/380658.md)
+
+7-6 [四级警长｜官方，千万别给违法犯罪人员站台！且从张董事长殴打院士说起](/articles/cdt/380660.md)
+
 7-6 [中国日报网｜美拒签中国500余名理工科研究生 延续打压政策](/articles/cdt/380661.md)
 
 7-5 [【立此存照】“您浏览到此书中不允许查看的页面”](/articles/cdt/380675.md)
@@ -596,8 +600,4 @@
 5-28 [北青深一度 | 越野赛道上，跑向生命终点的他们](/articles/cdt/382095.md)
 
 5-28 [BBC | 香港民阵会否消失？召集人陈皓桓谈“年轻一代孤单不安的民主路”](/articles/cdt/382096.md)
-
-5-28 [BBC | 黎智英等香港民主派人士前年国庆示威案被判监14至18个月](/articles/cdt/382097.md)
-
-5-30 [【CDT敏感词周报】第二十六期：三年饥荒、躺平学](/articles/cdt/382099.md)
 
