--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-6 [中国疫苗研发慢：钟南山说是因为防疫有效没有病人](/articles/rfi/1026735.md)
+
 7-6 [中国反指美国压迫企业开后门取数据 是全球网络安全最大胁迫](/articles/rfi/1026736.md)
 
 7-6 [美国律师事务所传对滴滴发起集体诉讼 前景不明](/articles/rfi/1026737.md)
@@ -598,6 +600,4 @@
 7-1 [曾主导伊拉克战争的美国前鹰派防长拉姆斯菲尔德去世](/articles/rfi/1027033.md)
 
 7-1 [日本自民党干事长就中共建党一百周年致电中方](/articles/rfi/1027034.md)
-
-7-1 [中共建党百年 习近平：列强欺凌中国的时代不再 – 法国国际广播电台 - RFI](/articles/rfi/1027035.md)
 
