--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-6 [魔方达赖喇嘛“马赛克”拍出高价](/articles/dw/1041550.md)
+
 7-6 [中国「春苗行动」：台湾人和海外华人买单吗？](/articles/dw/1041551.md)
 
 7-6 [港府公布候选人审查委员会 专家：北京全权掌握](/articles/dw/1041552.md)
@@ -598,6 +600,4 @@
 6-20 [德国之声通过赛风 对抗网络审查](/articles/dw/1041848.md)
 
 6-20 [边开车边充电？电动车未来可期！](/articles/dw/1041849.md)
-
-6-19 [偷拍数千女生并以“美丑”排序 《校花》被撤展](/articles/dw/1041850.md)
 
