--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-6 [【网络民议】自由是一点一点失去的，最后就突然意识到都没了](/articles/cdt/380650.md)
+
+7-6 [立场新闻｜香港电影金像奖最佳影片《十年》月底将从Netflix下架](/articles/cdt/380652.md)
+
 7-6 [Matters｜多数派：葛剑雄“逆练”左翼历史理论，如何理解“统治者书写历史”？](/articles/cdt/380654.md)
 
 7-6 [Matters｜滕彪：“你们全家都是共产党员！”](/articles/cdt/380656.md)
@@ -596,8 +600,4 @@
 5-28 [人生研究所｜电击孕妇、蹂躏少女，杨永信又卷土重来：到底是谁在纵容他？](/articles/cdt/382081.md)
 
 5-28 [【立此存照】共青团微博号召年轻人不要“躺平” 反被呛“涨资产阶级士气、灭无产阶级威风”](/articles/cdt/382089.md)
-
-5-28 [Alfred | 港人流亡日记：内疚及恐惧（及近况更新）](/articles/cdt/382090.md)
-
-5-28 [新周刊 | 不内卷，不躺平，这届年轻人还能怎么办](/articles/cdt/382093.md)
 
