--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-6 [塔利班在东北部攻势受阻](/articles/dw/1041547.md)
+
+7-6 [演奏音乐吧，不要战争！](/articles/dw/1041548.md)
+
+7-6 [林郑月娥、习近平入榜全球“新闻自由掠夺者”](/articles/dw/1041549.md)
+
 7-6 [魔方达赖喇嘛“马赛克”拍出高价](/articles/dw/1041550.md)
 
 7-6 [中国「春苗行动」：台湾人和海外华人买单吗？](/articles/dw/1041551.md)
@@ -594,10 +600,4 @@
 6-20 [前东德“史塔西文件”并入德国历史档案馆](/articles/dw/1041845.md)
 
 6-20 [“极地之星”号科考船的悲观认知](/articles/dw/1041846.md)
-
-6-20 [超音速飞行：空花阳焰还是开启新时代？](/articles/dw/1041847.md)
-
-6-20 [德国之声通过赛风 对抗网络审查](/articles/dw/1041848.md)
-
-6-20 [边开车边充电？电动车未来可期！](/articles/dw/1041849.md)
 
