--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+7-6 [汪洋对台重提“和统”   近九成台湾人对中共反感或无感](/articles/rfa/1045143.md)
+
+7-6 [达赖喇嘛生日承诺坚守双价值   蔡英文、莫迪贺寿](/articles/rfa/1045144.md)
+
 7-6 [传科技巨企威胁撤走　经济学者：外企忧港营商环境趋近中国](/articles/rfa/1045145.md)
 
 7-6 [云南瑞丽新增本土病例再度封城](/articles/rfa/1045146.md)
@@ -596,8 +600,4 @@
 6-2 [日台合资设台积电在日研发中心  提升日本半导体竞争力](/articles/rfa/1045441.md)
 
 6-2 [北约秘书长呼吁对北京采取更强硬立场](/articles/rfa/1045442.md)
-
-6-1 [香港支联会重重受压  民调显示近3成人赞成解散](/articles/rfa/1045443.md)
-
-6-1 [广州公布封锁38个社区   变异病毒入侵佛山多区被封](/articles/rfa/1045444.md)
 
