--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-7 [澳大利亚如何对抗中国](/articles/rfi/1026710.md)
+
+7-7 [美股走低道琼指数挫逾400点 – 法国国际广播电台 - RFI](/articles/rfi/1026711.md)
+
+7-6 [法国外贸银行称中国不太可能叫停“一带一路”](/articles/rfi/1026712.md)
+
 7-6 [中国组办世界政党大会 习近平说实现民主有多种方式 不可能千篇一律](/articles/rfi/1026713.md)
 
 7-6 [甘肃弹道导弹发射井之疑：官方说那是风力发电场](/articles/rfi/1026714.md)
@@ -594,10 +600,4 @@
 7-2 [中共党庆 习近平念念不忘外来势力](/articles/rfi/1027008.md)
 
 7-2 [香港七一回归24周年 警方高度戒备逮捕10多人](/articles/rfi/1027009.md)
-
-7-2 [习近平誓&quot;粉碎台&quot;独 美国国务院呼吁和平解决两岸问题](/articles/rfi/1027010.md)
-
-7-2 [欧盟启用“新冠数字旅行证书”重振旅游业](/articles/rfi/1027011.md)
-
-7-2 [德国实验室CureVac开发新疫苗  效率仅48% 正等欧洲药管局批准](/articles/rfi/1027012.md)
 
