--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-6 [美国在台协会宣布台北办事处新处长 由深谙两岸事务的资深外交官出任](/articles/voa/1039692.md)
+
 7-6 [日本宣布二度赠台疫苗 113万剂AZ疫苗8日送达](/articles/voa/1039693.md)
 
 7-6 [林郑月娥称国安风险尚在，港警侦破一起“学生制造炸弹”案](/articles/voa/1039694.md)
@@ -598,6 +600,4 @@
 6-22 [欧盟对缅甸军人政权实施新制裁](/articles/voa/1039990.md)
 
 6-22 [美国公布其全球疫苗共享计划大纲](/articles/voa/1039991.md)
-
-6-22 [时事大家谈: 百年党庆，习近平高举共产主义大旗？](/articles/voa/1039992.md)
 
