--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-7 [中国当局施压导致滴滴股票大跌，滴滴可能被迫退市](/articles/voa/1039691.md)
+
 7-6 [美国在台协会宣布台北办事处新处长 由深谙两岸事务的资深外交官出任](/articles/voa/1039692.md)
 
 7-6 [日本宣布二度赠台疫苗 113万剂AZ疫苗8日送达](/articles/voa/1039693.md)
@@ -598,6 +600,4 @@
 6-22 [美最高法院裁定美国全国大学体育协会败诉](/articles/voa/1039989.md)
 
 6-22 [欧盟对缅甸军人政权实施新制裁](/articles/voa/1039990.md)
-
-6-22 [美国公布其全球疫苗共享计划大纲](/articles/voa/1039991.md)
 
