--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-7 [澳大利亚举行集会游行活动 纪念乌鲁木齐“七.五”事件](/articles/rfa/1045142.md)
+
 7-6 [汪洋对台重提“和统”   近九成台湾人对中共反感或无感](/articles/rfa/1045143.md)
 
 7-6 [达赖喇嘛生日承诺坚守双价值   蔡英文、莫迪贺寿](/articles/rfa/1045144.md)
@@ -598,6 +600,4 @@
 6-2 [五名港人在美成立新组织 游说及支援香港流亡者](/articles/rfa/1045440.md)
 
 6-2 [日台合资设台积电在日研发中心  提升日本半导体竞争力](/articles/rfa/1045441.md)
-
-6-2 [北约秘书长呼吁对北京采取更强硬立场](/articles/rfa/1045442.md)
 
