--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-7 [德国一政治学者因涉嫌做中国间谍被捕](/articles/voa/1039688.md)
+
+7-7 [西藏四名僧侣被判重刑 人权观察谴责中共“惊人的司法不公”](/articles/voa/1039689.md)
+
+7-7 [面对北京压力 普京引入欧洲政商势力 助俄罗斯帮越南在南中国海采油](/articles/voa/1039690.md)
+
 7-7 [中国当局施压导致滴滴股票大跌，滴滴可能被迫退市](/articles/voa/1039691.md)
 
 7-6 [美国在台协会宣布台北办事处新处长 由深谙两岸事务的资深外交官出任](/articles/voa/1039692.md)
@@ -594,10 +600,4 @@
 6-22 [英国开始加入跨太平洋贸易协议的谈判](/articles/voa/1039986.md)
 
 6-22 [“七国”承诺合作应对气候变化 专家：虽取得共识但承诺不具体](/articles/voa/1039987.md)
-
-6-22 [西班牙首相宣布赦免9名加泰罗尼亚分离分子](/articles/voa/1039988.md)
-
-6-22 [美最高法院裁定美国全国大学体育协会败诉](/articles/voa/1039989.md)
-
-6-22 [欧盟对缅甸军人政权实施新制裁](/articles/voa/1039990.md)
 
