--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+7-7 [《全球汇市》美元升高，市场等待从美联储会议记录中寻找线索](/articles/reuters/1036071.md)
+
+7-7 [美股道指和标普500指数受金融股拖累下跌 纳指创纪录新高](/articles/reuters/1036072.md)
+
+7-7 [油价大幅走低 此前OPEC叫停了产量磋商](/articles/reuters/1036073.md)
+
+7-7 [金价一度升穿1,800美元关口 因美债收益率下跌](/articles/reuters/1036074.md)
+
 7-6 [中国吉利汽车上半年总销量同比增近两成 达至全年目标41%](/articles/reuters/1036075.md)
 
 7-6 [花旗预测未来一年全球股市仅上涨2%](/articles/reuters/1036076.md)
@@ -592,12 +600,4 @@
 6-29 [中国在央行数字货币方面处于领先地位--日本金融厅前长官](/articles/reuters/1036369.md)
 
 6-29 [美军在叙利亚遭火箭弹袭击 此前美军曾空袭伊朗支持的民兵组织](/articles/reuters/1036370.md)
-
-6-29 [美国女股神Cathie Wood的ARK Invest向美证交会申请成立比特币ETF](/articles/reuters/1036371.md)
-
-6-29 [澳洲已就中国对瓶装葡萄酒征收进口关税向WTO提出正式申诉](/articles/reuters/1036372.md)
-
-6-29 [独家：白宫拟发布行政令 指示政府部门决策时考虑反垄断关切--消息](/articles/reuters/1036373.md)
-
-6-29 [巴西官员称要求中国澄清新的大豆标准 巴西市场不会受到重大影响](/articles/reuters/1036374.md)
 
